# ClipMorph

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  example-config.json  example-config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  template.env
.github/workflows/: build.yml  release.yml
ClipMorph/: __init__.py  __main__.py  cli.py  convert.py  main.py  utils.py
ClipMorph/auth/: generate_google_oauth_refresh_token.py  youtube.py
ClipMorph/conversion_pipeline/: __init__.py  convert.py  edit.py  transcribe.py
ClipMorph/ffmpeg/: __init__.py
ClipMorph/ffmpeg/linux/: ffmpeg  ffprobe
ClipMorph/generate_video/: __init__.py  assemble.py  audio.py  censor.py  convert.py  edit.py  pipeline.py  subtitles.py  transcript.py
ClipMorph/pipeline/: __init__.py  convert.py  edit.py  transcribe.py
ClipMorph/upload/: instagram.py  tiktok.py  youtube.py
ClipMorph/upload_pipeline/: __init__.py  instagram.py
clipmorph/: __init__.py  __main__.py  cli.py
clipmorph/conversion_pipeline/: convert.py
clipmorph/upload_pipeline/: __init__.py
